--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-	background-color: #f8f8ff /*offwhite*/
+	background-color: #ffffff
 }
 
 .wrap {
@@ -39,7 +39,3 @@ h3 {font-size: 25px;}
 	width: 600px;
 	top: 460px;
 }
-
-
-
-
